--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "mongodb": "^4.5.0"
+    "mongodb": "^4.5.0",
+    "react-firebase-hooks": "^5.0.3"
   }
 }
